plugins {
    id "java-library"
}

group = project.maven_group

sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation "org.jetbrains:annotations:24.1.0"

    my 'com.google.zxing:core:3.3.0'

    my('com.googlecode.soundlibs:mp3spi:1.9.5.4') {
        exclude group: 'com.googlecode.soundlibs', module: 'tritonus-share'
    }

    my 'com.github.GregTaoo:JustFLAC:1.0.0'

    my 'com.github.trilarion:vorbis-support:1.1.0'

    my('com.googlecode.soundlibs:tritonus-all:0.3.7.2') {
        exclude group: 'com.googlecode.soundlibs', module: 'tritonus-share'
    }

    my 'net.jthink:jaudiotagger:3.0.1'
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 16
}
